Release/ExprParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Z:\C#\Kompilyatory\bin\Debug\Expr.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Kompilyatory {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class ExprParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, START_BODY=15, END_BODY=16, 
		RELOP=17, PRINT=18, TYPE=19, LINE=20, ID=21, NUMBER=22, LPAREN=23, RPAREN=24, 
		INTEGER=25, FLOAT=26, ADD=27, SUB=28, SEP=29, MUL=30, EQ_EQ=31, NOT_EQ=32, 
		GT=33, LT=34, LE=35, GE=36, ASSIGNMENT=37, END=38, EMPTY=39;
	public const int
		RULE_prog = 0, RULE_stat = 1, RULE_callFunc = 2, RULE_funcID = 3, RULE_argc = 4, 
		RULE_arguments = 5, RULE_initialization = 6, RULE_function = 7, RULE_parameter = 8, 
		RULE_funType = 9, RULE_return = 10, RULE_for = 11, RULE_for_init = 12, 
		RULE_for_body = 13, RULE_if = 14, RULE_ifBody = 15, RULE_elseBody = 16, 
		RULE_doWhile = 17, RULE_while = 18, RULE_whileBody = 19, RULE_changeValue = 20, 
		RULE_equation = 21, RULE_print = 22, RULE_expr = 23, RULE_print_arguments = 24;
	public static readonly string[] ruleNames = {
		"prog", "stat", "callFunc", "funcID", "argc", "arguments", "initialization", 
		"function", "parameter", "funType", "return", "for", "for_init", "for_body", 
		"if", "ifBody", "elseBody", "doWhile", "while", "whileBody", "changeValue", 
		"equation", "print", "expr", "print_arguments"
	};

	private static readonly string[] _LiteralNames = {
		null, "'def Main'", "'.'", "','", "'$'", "'def'", "'->'", "'return'", 
		"'void'", "'for'", "'if'", "'then'", "'else'", "'do'", "'while'", "'begin'", 
		"'end'", null, null, null, null, null, null, "'('", "')'", "'int'", "'float'", 
		"'+'", "'-'", "'/'", "'*'", "'=='", "'!='", "'>'", "'<'", "'<='", "'>='", 
		"'='", "';'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "START_BODY", "END_BODY", "RELOP", "PRINT", "TYPE", 
		"LINE", "ID", "NUMBER", "LPAREN", "RPAREN", "INTEGER", "FLOAT", "ADD", 
		"SUB", "SEP", "MUL", "EQ_EQ", "NOT_EQ", "GT", "LT", "LE", "GE", "ASSIGNMENT", 
		"END", "EMPTY"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Expr.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public ExprParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgContext : ParserRuleContext {
		public ITerminalNode START_BODY() { return GetToken(ExprParser.START_BODY, 0); }
		public ITerminalNode END_BODY() { return GetToken(ExprParser.END_BODY, 0); }
		public FunctionContext[] function() {
			return GetRuleContexts<FunctionContext>();
		}
		public FunctionContext function(int i) {
			return GetRuleContext<FunctionContext>(i);
		}
		public StatContext[] stat() {
			return GetRuleContexts<StatContext>();
		}
		public StatContext stat(int i) {
			return GetRuleContext<StatContext>(i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prog; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.EnterProg(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.ExitProg(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprVisitor<TResult> typedVisitor = visitor as IExprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgContext prog() {
		ProgContext _localctx = new ProgContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 53;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==T__4) {
				{
				{
				State = 50; function();
				}
				}
				State = 55;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 56; Match(T__0);
			State = 57; Match(START_BODY);
			State = 61;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__8) | (1L << T__9) | (1L << T__12) | (1L << T__13) | (1L << PRINT) | (1L << TYPE) | (1L << ID))) != 0)) {
				{
				{
				State = 58; stat();
				}
				}
				State = 63;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 64; Match(END_BODY);
			State = 65; Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatContext : ParserRuleContext {
		public InitializationContext initialization() {
			return GetRuleContext<InitializationContext>(0);
		}
		public ITerminalNode END() { return GetToken(ExprParser.END, 0); }
		public PrintContext print() {
			return GetRuleContext<PrintContext>(0);
		}
		public IfContext @if() {
			return GetRuleContext<IfContext>(0);
		}
		public WhileContext @while() {
			return GetRuleContext<WhileContext>(0);
		}
		public DoWhileContext doWhile() {
			return GetRuleContext<DoWhileContext>(0);
		}
		public ChangeValueContext changeValue() {
			return GetRuleContext<ChangeValueContext>(0);
		}
		public ForContext @for() {
			return GetRuleContext<ForContext>(0);
		}
		public CallFuncContext callFunc() {
			return GetRuleContext<CallFuncContext>(0);
		}
		public StatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stat; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.EnterStat(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.ExitStat(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprVisitor<TResult> typedVisitor = visitor as IExprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatContext stat() {
		StatContext _localctx = new StatContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_stat);
		try {
			State = 87;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case TYPE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 67; initialization();
				State = 68; Match(END);
				}
				break;
			case PRINT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 70; print();
				}
				break;
			case T__9:
				EnterOuterAlt(_localctx, 3);
				{
				State = 71; @if();
				}
				break;
			case T__13:
				EnterOuterAlt(_localctx, 4);
				{
				State = 72; @while();
				State = 73; Match(END);
				}
				break;
			case T__12:
				EnterOuterAlt(_localctx, 5);
				{
				State = 75; doWhile();
				State = 76; Match(END);
				}
				break;
			case T__3:
				EnterOuterAlt(_localctx, 6);
				{
				State = 78; changeValue();
				State = 79; Match(END);
				}
				break;
			case T__8:
				EnterOuterAlt(_localctx, 7);
				{
				State = 81; @for();
				State = 82; Match(END);
				}
				break;
			case ID:
				EnterOuterAlt(_localctx, 8);
				{
				State = 84; callFunc();
				State = 85; Match(END);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CallFuncContext : ParserRuleContext {
		public FuncIDContext funcID() {
			return GetRuleContext<FuncIDContext>(0);
		}
		public ArgcContext[] argc() {
			return GetRuleContexts<ArgcContext>();
		}
		public ArgcContext argc(int i) {
			return GetRuleContext<ArgcContext>(i);
		}
		public CallFuncContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_callFunc; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.EnterCallFunc(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.ExitCallFunc(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprVisitor<TResult> typedVisitor = visitor as IExprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCallFunc(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CallFuncContext callFunc() {
		CallFuncContext _localctx = new CallFuncContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_callFunc);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 89; funcID();
			State = 90; Match(LPAREN);
			State = 94;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << NUMBER) | (1L << LPAREN))) != 0)) {
				{
				{
				State = 91; argc();
				}
				}
				State = 96;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 97; Match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncIDContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(ExprParser.ID, 0); }
		public FuncIDContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcID; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.EnterFuncID(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.ExitFuncID(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprVisitor<TResult> typedVisitor = visitor as IExprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncID(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FuncIDContext funcID() {
		FuncIDContext _localctx = new FuncIDContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_funcID);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99; Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ArgcContext : ParserRuleContext {
		public ArgumentsContext arguments() {
			return GetRuleContext<ArgumentsContext>(0);
		}
		public ArgcContext[] argc() {
			return GetRuleContexts<ArgcContext>();
		}
		public ArgcContext argc(int i) {
			return GetRuleContext<ArgcContext>(i);
		}
		public ArgcContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_argc; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.EnterArgc(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.ExitArgc(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprVisitor<TResult> typedVisitor = visitor as IExprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArgc(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ArgcContext argc() {
		ArgcContext _localctx = new ArgcContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_argc);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 101; arguments();
			State = 109;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==T__2) {
				{
				State = 102; Match(T__2);
				State = 106;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,4,_ctx);
				while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
					if ( _alt==1 ) {
						{
						{
						State = 103; argc();
						}
						} 
					}
					State = 108;
					_errHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(_input,4,_ctx);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ArgumentsContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(ExprParser.ID, 0); }
		public ITerminalNode NUMBER() { return GetToken(ExprParser.NUMBER, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ArgumentsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_arguments; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.EnterArguments(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.ExitArguments(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprVisitor<TResult> typedVisitor = visitor as IExprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArguments(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ArgumentsContext arguments() {
		ArgumentsContext _localctx = new ArgumentsContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_arguments);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 115;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				State = 111; Match(T__3);
				State = 112; Match(ID);
				}
				break;

			case 2:
				{
				State = 113; Match(NUMBER);
				}
				break;

			case 3:
				{
				State = 114; expr(0);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InitializationContext : ParserRuleContext {
		public ITerminalNode TYPE() { return GetToken(ExprParser.TYPE, 0); }
		public ITerminalNode ID() { return GetToken(ExprParser.ID, 0); }
		public ITerminalNode ASSIGNMENT() { return GetToken(ExprParser.ASSIGNMENT, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public CallFuncContext callFunc() {
			return GetRuleContext<CallFuncContext>(0);
		}
		public InitializationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_initialization; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.EnterInitialization(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.ExitInitialization(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprVisitor<TResult> typedVisitor = visitor as IExprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInitialization(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InitializationContext initialization() {
		InitializationContext _localctx = new InitializationContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_initialization);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 117; Match(TYPE);
			State = 118; Match(ID);
			State = 124;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==ASSIGNMENT) {
				{
				State = 119; Match(ASSIGNMENT);
				State = 122;
				_errHandler.Sync(this);
				switch (_input.La(1)) {
				case T__3:
				case NUMBER:
				case LPAREN:
					{
					State = 120; expr(0);
					}
					break;
				case ID:
					{
					State = 121; callFunc();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(ExprParser.ID, 0); }
		public ITerminalNode LPAREN() { return GetToken(ExprParser.LPAREN, 0); }
		public ParameterContext parameter() {
			return GetRuleContext<ParameterContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(ExprParser.RPAREN, 0); }
		public FunTypeContext funType() {
			return GetRuleContext<FunTypeContext>(0);
		}
		public ITerminalNode START_BODY() { return GetToken(ExprParser.START_BODY, 0); }
		public ITerminalNode END_BODY() { return GetToken(ExprParser.END_BODY, 0); }
		public StatContext[] stat() {
			return GetRuleContexts<StatContext>();
		}
		public StatContext stat(int i) {
			return GetRuleContext<StatContext>(i);
		}
		public ReturnContext @return() {
			return GetRuleContext<ReturnContext>(0);
		}
		public ITerminalNode END() { return GetToken(ExprParser.END, 0); }
		public FunctionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_function; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.EnterFunction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.ExitFunction(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprVisitor<TResult> typedVisitor = visitor as IExprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunction(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionContext function() {
		FunctionContext _localctx = new FunctionContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_function);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 126; Match(T__4);
			State = 127; Match(ID);
			State = 128; Match(LPAREN);
			State = 129; parameter();
			State = 130; Match(RPAREN);
			State = 131; Match(T__5);
			State = 132; funType();
			State = 133; Match(START_BODY);
			State = 137;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__8) | (1L << T__9) | (1L << T__12) | (1L << T__13) | (1L << PRINT) | (1L << TYPE) | (1L << ID))) != 0)) {
				{
				{
				State = 134; stat();
				}
				}
				State = 139;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 144;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==T__6) {
				{
				State = 140; Match(T__6);
				State = 141; @return();
				State = 142; Match(END);
				}
			}

			State = 146; Match(END_BODY);
			State = 147; Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParameterContext : ParserRuleContext {
		public ITerminalNode TYPE() { return GetToken(ExprParser.TYPE, 0); }
		public ITerminalNode ID() { return GetToken(ExprParser.ID, 0); }
		public ParameterContext[] parameter() {
			return GetRuleContexts<ParameterContext>();
		}
		public ParameterContext parameter(int i) {
			return GetRuleContext<ParameterContext>(i);
		}
		public ParameterContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parameter; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.EnterParameter(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.ExitParameter(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprVisitor<TResult> typedVisitor = visitor as IExprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParameter(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParameterContext parameter() {
		ParameterContext _localctx = new ParameterContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_parameter);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 158;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==TYPE) {
				{
				State = 149; Match(TYPE);
				State = 150; Match(ID);
				State = 155;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,11,_ctx);
				while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
					if ( _alt==1 ) {
						{
						{
						State = 151; Match(T__2);
						State = 152; parameter();
						}
						} 
					}
					State = 157;
					_errHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(_input,11,_ctx);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunTypeContext : ParserRuleContext {
		public ITerminalNode TYPE() { return GetToken(ExprParser.TYPE, 0); }
		public FunTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funType; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.EnterFunType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.ExitFunType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprVisitor<TResult> typedVisitor = visitor as IExprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunTypeContext funType() {
		FunTypeContext _localctx = new FunTypeContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_funType);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 160;
			_la = _input.La(1);
			if ( !(_la==T__7 || _la==TYPE) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ReturnContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(ExprParser.ID, 0); }
		public ITerminalNode NUMBER() { return GetToken(ExprParser.NUMBER, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ReturnContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_return; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.EnterReturn(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
			if (typedListener != null) typedListener.ExitReturn(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprVisitor<TResult> typedVisitor = visitor as IExprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitReturn(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ReturnContext @return() {
		ReturnContext _localctx = new ReturnContext(_ctx, State);
		EnterRule(_localctx, 20, RULE_return);
		try {
			State = 166;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,13,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 162; Match(T__3);
				State = 163; Match(ID);
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 164; Match(NUMBER);
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 165; expr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ForContext : ParserRuleContext {
		public ITerminalNode LPAREN() { return GetToken(ExprParser.LPAREN, 0); }
		public EquationContext equation() {
			return GetRuleContext<EquationContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(ExprParser.RPAREN, 0); }
		public ITerminalNode START_BODY() { return GetToken(ExprParser.START_BODY, 0); }
		public For_bodyContext for_body() {
			return GetRuleContext<For_bodyContext>(0);
		}
		public ITerminalNode END_BODY() { return GetToken(ExprParser.END_BODY, 0); }
		public For_initContext for_init() {
			return GetRuleContext<For_initContext>(0);
		}
		public ChangeValueContext changeValue() {
			return GetRuleContext<ChangeValueContext>(0);
		}
		public ForContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_for; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExprListener typedListener = listener as IExprListener;
